--- a/index.html
+++ b/index.html
@@ -41,8 +41,10 @@
   </header>
   <main>
     <section class="your_business section">
-      <h1 class="your_business_h">Effective Solutions for Your Business</h1>
-      <button type="button" class="your_business_button">Order Service</button>
+      <div class="container">
+        <h1 class="your_business_h">Effective Solutions for Your Business</h1>
+        <button type="button" class="your_business_button">Order Service</button>
+      </div>
     </section>
     <section class="section_test section">
       <div class="container">
@@ -158,8 +160,10 @@
     </section>
   </main>
   <footer class="footer">
-    <a href="./index.html" class="footer_logo"> Web <span class="footer_logo-text">Studio</span> </a>
-    <p class="footer_text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+    <div class="container">
+      <a href="./index.html" class="footer_logo"> Web <span class="footer_logo-text">Studio</span> </a>
+      <p class="footer_text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+    </div>
   </footer>
 </body>
 </html>
