--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <title>goit-markup-hw-02</title>
 </head>
 <body>
-  <header class="neader_link">
+  <header class="header_link">
     <div class="container">
       <nav class="nav_link">
         <a href="./index.html" class="logo">Web<span class="logo_text">Studio</span> </a>
