--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </ul>
       </nav>
       <address class="adres">
-        <ul>
+        <ul class="adres_ul">
           <li><a href="mailto:info@devstudio.com" class="adress_link">info@devstudio.com</a></li>
           <li><a href="tel:+110001111111" class="adress_link">+11 (000) 111-11-11</a></li>
         </ul>
